--- a/app/views/characters/_gear_list.turbo_stream.erb
+++ b/app/views/characters/_gear_list.turbo_stream.erb
@@ -1,22 +1,29 @@
-<turbo-frame action="replace" id="gear_list_<%= dom_id(character) %>">
-  <div>
-    <h1>Gear</h1>
-    <ul>
-      <% character.gear.each do |gear| %>
-        <li>
-          <div class="flex">
-            <%= gear.name %>
-            <%= 
-              button_to "Destroy", 
-              entity_resource_path(entity: character, resource: gear), 
-              method: :delete, 
-              data: { 
-                turbo_frame: "gear_list"
-              } 
-            %>
-          </div>
-        </li>
-      <% end %>
-    </ul>
-  </div>
-</turbo-frame>
+<turbo-stream action="replace" target="gear_list">
+  <template>
+    <div>
+      <h1>Gear</h1>
+      <ul>
+        <% character.gear.each do |gear| %>
+          <li>
+            <div class="flex">
+              <%= gear.name %>
+              <%= 
+                button_to "Destroy", 
+                entity_resource_path(
+                  entity_id: character.id, 
+                  entity_type: "Character",
+                  resource_id: gear.id,
+                  resource_type: "Gear"
+                ), 
+                method: :delete, 
+                data: { 
+                  turbo_frame: "gear_list"
+                } 
+              %>
+            </div>
+          </li>
+        <% end %>
+      </ul>
+    </div>
+  </template>
+</turbo-stream>
