Create and style weapon list

--- a/app/views/characters/_gear_list.turbo_stream.erb
+++ b/app/views/characters/_gear_list.turbo_stream.erb
@@ -1,22 +1,25 @@
 <turbo-stream action="replace" target="gear_list">
   <template>
-    <div>
+    <div class="flex flex-col p-3 m-3 border border-gray-200 rounded-md">
       <h1>Gear</h1>
       <ul>
         <% character.gear.each do |gear| %>
-          <li>
-            <div class="flex">
-              <%= gear.name %>
+          <li class="border-b border-gray-200">
+            <div class="flex items-center">
+              <p class="m-3"><%= gear.name %></p>
+              <span class="grow"></span>
               <%= 
-                button_to "Destroy", 
+                button_to "X", 
                 entity_resource_path(
                   entity_id: character.id, 
                   entity_type: "Character",
                   resource_id: gear.id,
                   resource_type: "Gear"
-                ), 
+                ),
+                class: "m-3 text-red-500", 
                 method: :delete, 
                 data: { 
+                  turbo_action: "replace",
                   turbo_frame: "gear_list"
                 } 
               %>
