--- a/app/views/characters/show.html.erb
+++ b/app/views/characters/show.html.erb
@@ -1,11 +1,6 @@
-<turbo-frame id="character-sheet" class="flex flex-col">
-  <h1 class="text-xl">Character</h1>
-  <div id="character" class="flex p-3 m-3 border border-gray-200 rounded-md space-x-4">
-    <p>
-      <strong>Name:</strong>
-      <%= character.name %>
-    </p>
-
+<turbo-frame id="character-sheet" class="flex flex-col space-y-3" data-controller="character">
+  <h1 class="text-xl"><%= character.name %></h1>
+  <div id="character" class="flex p-3 border border-gray-200 rounded-md space-x-4">
     <p>
       <strong>Description:</strong>
       <%= character.description %>
@@ -20,7 +15,7 @@
   <turbo-frame id="traits">
     <div class="flex space-x-5 w-full">
       <% character.traits.each do |trait| %>
-        <div class="flex flex-col p-3 m-3 border border-gray-200 rounded-md items-center w-1/6">
+        <div class="flex flex-col p-3 border border-gray-200 rounded-md items-center w-1/6">
           <p><%= trait.name %></p>
           <p><%= trait.cached_value %></p>
         </div>
@@ -29,7 +24,7 @@
   </turbo-frame>
 
   <turbo-frame id="weapon_list">
-    <div class="flex flex-col p-3 m-3 border border-gray-200 bg-gray-100 rounded-md space-y-2 shadow-md">
+    <div class="flex flex-col p-3 border border-gray-200 bg-gray-100 rounded-md space-y-2 shadow-md">
       <div class="flex mb-2">
         <h1>Weapons</h1>
         <span class="grow"></span>
