--- a/app/views/characters/show.html.erb
+++ b/app/views/characters/show.html.erb
@@ -10,6 +10,16 @@
       <strong>Level:</strong>
       <%= character.level %>
     </p>
+
+    <p>
+      <strong>Max Health:</strong>
+      <%= character.health %>
+    </p>
+
+    <p>
+      <strong>Threat Power:</strong>
+      <%= character.threat_power %>
+    </p>
   </div>
 
   <turbo-frame id="traits">
@@ -18,6 +28,11 @@
         <div class="flex flex-col p-3 border border-gray-200 rounded-md items-center w-1/6">
           <p><%= trait.name %></p>
           <p><%= trait.cached_value %></p>
+          <div class="flex text-sm text-zinc-500">
+           <p class="text-green-900"><%= "#{trait.crit_success}" %></p> 
+           <p class="mx-2">/</p>
+           <p class="text-red-900"><%= "#{trait.crit_fail}" %></p>
+          </div>
         </div>
       <% end %>
     </div>
@@ -37,7 +52,8 @@
           <div class="flex flex-col border rounded-md px-3 py-2 bg-gray-200 shadow-md">
             <div class=" flex space-x-2 items-center">
               <p class="font-bold"><%= weapon.name %></p>
-              <p>Damage: <%= weapon.damage_dice_qty %>d<%= weapon.damage_dice %></p>
+              <p>Damage: <%= weapon.damage_dice_qty %>d<%= weapon.damage_dice %> + <%= character.weapon_trait_modifier(weapon) %></p>
+              <p>Strike Stat: <%= weapon.trait.code %></p>
               <p>Range: <%= weapon.range %></p>
               <p>Ammo: <%= weapon.ammo %></p>
               <p>Quality: <%= weapon.quality %></p>
